# libftdi

./: meson.build  meson_options.txt
doc/: meson.build
examples/: meson.build
ftdi_eeprom/: meson.build
ftdipp/: meson.build
meson/: generate_doxyfile.py
src/: meson.build
test/: meson.build
